@@ -170,6 +170,7 @@ Version 1.5
  - Restore Z-Wave.Me ZME_05461 (Nechry)
  - Add Domux Wall Plug DX2SK-Z (Nechry)
  - Add Yale Key Free Touchscreen Deadbolt YRD446 (Nechry)
+ - Add Yale nexTouch Wireless Touchscreen (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
